# telegram-crawler

./: .env.example  .gitignore  README.md  pyproject.toml  run.sh
docs/ai/design/: feature-telegram-crawler.md
docs/ai/implementation/: feature-telegram-crawler.md
docs/ai/planning/: feature-telegram-crawler.md
docs/ai/requirements/: feature-telegram-crawler.md
docs/ai/testing/: feature-telegram-crawler.md
telegram_crawler/: __init__.py  __main__.py  checkpoint.py  cli.py  client.py  config.py  crawler.py  exporter.py  models.py  progress.py  rate_limiter.py  storage.py
tests/: conftest.py  test_checkpoint.py  test_config.py  test_crawler.py  test_exporter.py  test_integration.py  test_models.py  test_progress.py  test_rate_limiter.py  test_storage.py
